@@ -55,7 +55,6 @@ envlist =
     #       'unpack' used for py2
     ## pdbkf2-fastpbkdf2-py{2,3}, # tested by default config
     pbkdf2-hashlib-py{3,py3},
-    pbkdf2-m2crypto-py{2,3},
     pbkdf2-unpack-py{26,27,py},
     pbkdf2-frombytes-py{33,py3},
 
@@ -142,9 +141,7 @@ deps =
 
     # pbkdf2 backend tests
     # NOTE: fastpbkdf2 requires python-dev, libffi-dev, libssl-dev
-    # NOTE: m2crypto requires python-dev, swig, libssl-dev
     default,pbkdf2-fastpbkdf2: fastpbkdf2
-    pbkdf2-m2crypto: M2Crypto
     # pbkdf2-{hashlib,unpack,from_bytes} -- no deps
 
     # bcrypt backend tests
